Correcciones y mejoras memoria

--- a/Documentación/memoria.tex
+++ b/Documentación/memoria.tex
@@ -29,7 +29,9 @@
 
 % Párrafos
 \nonzeroparskip
-
+% Huérfanas y viudas
+\widowpenalty100000
+\clubpenalty100000
 
 % Imagenes
 \usepackage{graphicx}
@@ -387,7 +389,7 @@
 
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
-\noindent D. Pedro Luis Sánchez Ortega, profesor del departamento de Ingeniería Electromecánica. Área de Tecnología Electrónica.
+\noindent D. Pedro Luis Sánchez Ortega, profesor del departamento de Ingeniería Electromecánica. Área de Tecnología Electrónica y D. Álvar Arnaiz González del departamento de Ingeniería Informática, área de Lenguajes y Sistemas Informáticos.
 
 \noindent Expone:
 
