--- a/Documentación/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/tex/2_Objetivos_del_proyecto.tex
@@ -1,13 +1,13 @@
 \capitulo{2}{Objetivos del proyecto}
 
 \subsection{Objetivos generales}
-El proyecto tiene por objetivo hacer un análisis exhaustivo de entornos de desarrollo de aplicaciones de Realidad Aumentada basados en herramientas libres, de código abierto. Se platea conocer las diferentes herramientas disponibles en estos momentos, así como aquellas soluciones más apropiadas para cada caso, móvil, gafas de RV, u otros.
+El proyecto tiene por objetivo hacer un análisis exhaustivo de entornos de desarrollo de aplicaciones de Realidad Aumentada basados en herramientas libres, de código abierto, demostrando la capacidad de estas herramientas para su uso en la docencia. Se platea conocer las diferentes herramientas disponibles en estos momentos, así como aquellas soluciones más apropiadas para cada caso, móvil, gafas de RV, u otros.
 
-Se espera de entre las herramientas propuestas poder conocer sus ventajas y desventajas, la viabilidad de su uso en comparación con otras. Mediante una tabla comparativa en la que observar fácilmente sus características principales.
+Se espera, de entre las herramientas propuestas, poder conocer sus ventajas y desventajas, la viabilidad de su uso en comparación con otras. Mediante una tabla comparativa en la que observar fácilmente sus características principales.
 
 Además, se creará un ejemplo desarrollado con las herramientas estudiadas, en el cual se puedan apreciar las cualidades y las ventajas de estas tecnologías que pueden ofrecer, por ejemplo en campos como el de la educación.
 
-Para la creación del ejemplo se tiene como objetivo también el uso del MergeCube\ref{section:mergecube}. El objetivo de su uso, será demostrar la utilidad de una herramienta como el Mergecube con la realidad aumentada.
+Para la creación del ejemplo se tiene como objetivo también el uso del MergeCube~\ref{section:mergecube}. El objetivo de su uso, será demostrar la utilidad de una herramienta como el Mergecube con la realidad aumentada.
 
  
 
