--- a/Documentación/tex/6_Trabajos_relacionados.tex
+++ b/Documentación/tex/6_Trabajos_relacionados.tex
@@ -1,9 +1,22 @@
 \capitulo{6}{Trabajos relacionados}
 
-Este apartado sería parecido a un estado del arte de una tesis o tesina. En un trabajo final grado no parece obligada su presencia, aunque se puede dejar a juicio del tutor el incluir un pequeño resumen comentado de los trabajos y proyectos ya realizados en el campo del proyecto en curso. 
+Son numerosos los trabajos y estudios que hoy en día se realizan respecto a las tecnologías de realidad aumentada, en claro reflejo de su creciente interes....  En este apartado veremos algunos de los trabajos que destacan.
 
-\subsection{Artículos}
+\section{Artículos}
+\subsection{Realidad Aumentada, Educación y Museos}
+ 
+ Se trata de un estudio sobre la realidad aumentada
 
-\subsection{Libros}
+\section{Libros}
 
-\subsection{Paginas Web}
+\section{Paginas Web}
+
+
+\subsection{Niantic ¿?}
+Niantic~\footnote{\url{https://nianticlabs.com/es/}} se trata de una empresa centrada en el desarrollo de aplicaciones de realidad aumentada. Actualmente sus aplicaciones más conocidas son Ingress, Pokemon Go y HarryPotter wizzards unite.
+Pero aparte de estas aplicaciones también se dedican a la investigación y desarrollo de la realidad aumentada.
+
+Uno de los destacados es del que hablan en la entrada <<Building experiences from the ground up>> de su blog, en el que explican su intención de crear mejores experiencias de realidad aumentada con
+la capacidad de reconocer objetos del entorno para crear mejores sensaciones de profundidad. Para ello es necesario transformar una imagen 2D en un espacio 3D. Un ejemplo sería, en una imagen en la que salen varios arboles, si queremos poner un elemento de realidad aumentada, al moverse ese elemento no distinguiría el fondo de un árbol, por lo que la imagen AR siempre estará en un plano por encima. Pero si la imagen 2D pasa a ser un mapa 3D en el que se diferencian los arboles del fondo, sería posible que ese elemento de realidad aumentada pase de una forma realista detrás de los arboles. 
+\imagen{Trabajos_Relacionados/nianticAR}{ Representación del reconocimiento de profundidad.~\cite{nianticAR}}
+\url{https://nianticlabs.com/es/blog/building-experiences-from-the-ground-up/}
