--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -33,26 +33,54 @@
   school={Universitat Polit{\`e}cnica de Catalunya}
 }
 
-@misc{AR_company, title={Realidad Aumentada}, howpublished ={\url{https://ardev.es/realidad-aumentada/}},url={https://ardev.es/realidad-aumentada/}, journal={Augmented and Virtual Reality Company}
+@misc{AR_company, 
+	title={Realidad Aumentada}, 
+	howpublished ={\url{https://ardev.es/realidad-aumentada/}},
+	url={https://ardev.es/realidad-aumentada/}, 
+	journal={Augmented and Virtual Reality Company}
 }
 
-@misc{barker_2019, title={Merge Cube pone los hologramas en tu mano}, url={https://www.redbull.com/mx-es/merge-cube-hologramas-de-realidad-aumentada}, journal={Red Bull}, publisher={Red Bull}, author={Barker, Phil}, year={2019}, month={Dec}
+@misc{barker_2019, 
+	title={Merge Cube pone los hologramas en tu mano}, url={https://www.redbull.com/mx-es/merge-cube-hologramas-de-realidad-aumentada}, 
+	journal={Red Bull}, 
+	publisher={Red Bull}, 
+	author={Barker, Phil}, 
+	year={2019}, 
+	month={Dec}
 }
 
-@misc{vuforia_supported_versions, title={Vuforia supported versions},howpublished ={\url{https://library.vuforia.com/articles/Solution/Vuforia-Supported-Versions}}, url={https://library.vuforia.com/articles/Solution/Vuforia-Supported-Versions}, journal={Vuforia Engine Supported Versions}
+@misc{vuforia_supported_versions, 
+	title={Vuforia supported versions},
+	howpublished ={\url{https://library.vuforia.com/articles/Solution/Vuforia-Supported-Versions}}, url={https://library.vuforia.com/articles/Solution/Vuforia-Supported-Versions}, 
+	journal={Vuforia Engine Supported Versions}
 
 }
 
-@misc{vuforia_scanner,  title={Vuforia Object Scanner},howpublished ={\url{https://library.vuforia.com/content/vuforia-library/en/articles/Training/Vuforia-Object-Scanner-Users-Guide.html}}, url={https://library.vuforia.com/content/vuforia-library/en/articles/Training/Vuforia-Object-Scanner-Users-Guide.html}, journal={Vuforia Object Scanner}
+@misc{vuforia_scanner,  
+	title={Vuforia Object Scanner},
+	howpublished ={\url{https://library.vuforia.com/content/vuforia-library/en/articles/Training/Vuforia-Object-Scanner-Users-Guide.html}}, url={https://library.vuforia.com/content/vuforia-library/en/articles/Training/Vuforia-Object-Scanner-Users-Guide.html}, 
+	journal={Vuforia Object Scanner}
 }
 
-@misc{google, title={ARCore overview  |  Google Developers}, url={https://developers.google.com/ar/discover}, journal={Google}, publisher={Google}
+@misc{google, 
+	title={ARCore overview  |  Google Developers}, 
+	url={https://developers.google.com/ar/discover}, 
+	journal={Google}, 
+	publisher={Google}
 }
 
-@misc{apple_inc, title={ARKit 3 - Augmented Reality}, url={https://developer.apple.com/augmented-reality/arkit/}, journal={Apple Developer}, author={Apple Inc}
+@misc{apple_inc, 
+	title={ARKit 3 - Augmented Reality}, 
+	url={https://developer.apple.com/augmented-reality/arkit/}, 
+	journal={Apple Developer}, author={Apple Inc}
 }
 
-@book{linowes_babilinski_2017, place={Birmingham}, title={Augmented reality for developers build practical augmented reality applications with Unity, ARCore, ARKit, and Vuforia}, publisher={Packt}, author={Linowes, Jonathan and Babilinski, Krystian}, year={2017}
+@book{linowes_babilinski_2017, 
+	place={Birmingham}, 
+	title={Augmented reality for developers build practical augmented reality applications with Unity, ARCore, ARKit, and Vuforia}, 
+	publisher={Packt}, 
+	author={Linowes, Jonathan and Babilinski, Krystian}, 
+	year={2017}
 }
 
 @misc{ kudan_developer_hub, 
@@ -129,7 +157,10 @@
 	 url={https://www.xlsoft.com/en/products/kudan/showcase/marta.html}, 
 	 journal={エクセルソフト Arction}}
 
- @misc{ARhistory, title={Augmented Reality: A Comprehensive History (Part 1)}, url={https://blog.vertebrae.com/history-augmented-reality-1}, journal={Vertebrae Blog}, author={Motte, Stefanie}}
+ @misc{ARhistory, 
+ 	title={Augmented Reality: A Comprehensive History (Part 1)}, url={https://blog.vertebrae.com/history-augmented-reality-1}, 
+ 	journal={Vertebrae Blog},
+ 	author={Motte, Stefanie}}
  
   @misc{EspadaDamocles, 
   	title={El primer simulador VR de la historia tenía forma de recreativa, y se inventó a finales de los 50}, url={https://www.xataka.com/historia-tecnologica/el-primer-simulador-vr-de-la-historia-tenia-forma-de-recreativa-y-se-invento-a-finales-de-los-50}, 
@@ -173,4 +204,12 @@
 	pages={355--385},
 	year={1997},
 	publisher={MIT Press}
+}
+
+@misc{ nianticAR,
+	author = "Michael Firman",
+	title = "Building experiences from the ground up (literally)",
+	year = "2020",
+	url = "https://nianticlabs.com/es/blog/building-experiences-from-the-ground-up/",
+	note = "[Internet; descargado 22-junio-2020]"
 }
