Añadido Diagrama de casos de uso.

--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -16,7 +16,7 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 	\item \textbf{RF 1:} Crear una aplicación educativa.
 	\begin{itemize}
 	\item \textbf{RF 1.1:} Permitir que el usuario configure el nivel.
-	\item \textbf{RF 1.2:} Reconocer los niveles que ya han sido completados y distinguirlos de los demás.
+	\item \textbf{RF 1.2:} 
 	\item \textbf{RF 1.3:} Ofrecer ayuda o tutorial.	
 	\item \textbf{RF 1.4:} Realizar capturas de pantalla y guardarlas en el dispositivo.
 	\item \textbf{RF 1.5:} Permitir realizar encuestas de valoración.
@@ -40,6 +40,8 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 	\item \textbf{RNF 3:} Debe de ser responsiva, pudiéndose adaptar la interfaz, a la pantalla de cualquier dispositivo.
 \end{itemize}
 \section{Especificación de requisitos}
+
+\imagen{Anexos/casosdeuso}{Diagrama de casos de uso.}
 \subsection{Descripción de los casos de uso}
 %\tablaCasosDeUso{Caso de Uso 1: Menu}{}{}{}
 \subsubsection{Caso de uso 1: Menú}
