Añadidas tablas de licencias.

--- a/Documentación/bibliografiaAnexos.bib
+++ b/Documentación/bibliografiaAnexos.bib
@@ -14,4 +14,55 @@
        note = "[Internet; descargado 30-septiembre-2015]"
 }
 
-@misc{vuforia_devices,title={Vuforia Supported Devices}, url={https://library.vuforia.com/articles/Solution/vuforia-fusion-supported-devices.html}, journal={Vuforia Fusion Supported Devices}}
+@misc{vuforia_devices,
+	title={Vuforia Supported Devices},
+ 	url={https://library.vuforia.com/articles/Solution/vuforia-fusion-supported-devices.html}, 
+	journal={Vuforia Fusion Supported Devices}}
+
+@misc{unityAssetPlant,
+       author = "Badri Bebua",
+       title = "Plants",
+       year = "2019",
+       url = "https://assetstore.unity.com/packages/3d/vegetation/plants/plants-150261",
+       note = "[Internet; descargado ]"
+}
+
+@misc{unityFarm,
+       author = "False Wisp Studios",
+       title = "Cartoon Farm Crops",
+       year = "2017",
+       url = "https://assetstore.unity.com/packages/3d/vegetation/plants/cartoon-farm-crops-79777",
+       note = "[Internet; descargado ]"
+}
+
+@misc{unityGarden,
+       author = "GBAndrewGB",
+       title = "Garden Realistic Tools",
+       year = "2017",
+       url = "https://assetstore.unity.com/packages/3d/garden-realistic-tools-68960",
+       note = "[Internet; descargado ]"
+}
+
+@misc{sketchfabGirasol,
+       author = "AnemonaEspacial",
+       title = "Girasol",
+       year = "2020",
+       url = "https://sketchfab.com/3d-models/girasol-9e3e900295254b82bc144b3ca4333b80",
+       note = "[Internet; descargado ]"
+}
+
+@misc{iconoFertilizante,
+       author = "AnemonaEspacial",
+       title = "Icono Fertilizante",
+       url = "https://www.flaticon.es/icono-gratis/fertilizante_1465973?term=fertilizante&page=1&position=45",
+       note = "[Internet; descargado ]"
+}
+
+@misc{iconoGotasLluvia,
+       author = "AnemonaEspacial",
+       title = "Icono Fertilizante",
+       url = "https://icon-icons.com/es/icono/clima-gotas-de-lluvia-lluvia/124168",
+       note = "[Internet; descargado ]"
+}
+
+
