--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -196,3 +196,23 @@ Los costes totales de material, son de X.
 .
 El proyecto se han utilizado recursos para Unity de licencia gratuita mayoritariamente. Se tratan de algunos modelos 3D, imágenes, o Fonts que contaban con una licencia Creative Commons Atribution\footnote{\url{https://creativecommons.org/licenses/by/4.0/}} para su uso.
 
+\tablaSmall{Licencias Software}{l c c }{licenciasSoftware}{\multicolumn{1}{l}{}& Versión& Licencia\\}{
+	Unity& 2019.2.19f1& Unity Personal\\
+	Vuforia& 8.6.10& Gratuita y Propietaria \\
+	VisualStudio& 2017 &  Propietaria\\
+	Gimp& 2.10& GNU\\
+	}
+
+\tablaSmall{Componentes usados en Unity}{l c c }{componentesUnity}{\multicolumn{1}{l}{}& Versión& Licencia\\}{
+	Plants~\cite{unityAssetPlant}\footnote{\url{https://assetstore.unity.com/packages/3d/vegetation/plants/plants-150261}}& 1.0 & Extension Asset\\
+	Cartoon Farm Crops~\cite{unityFarm}\footnote{\url{https://assetstore.unity.com/packages/3d/vegetation/plants/cartoon-farm-crops-79777}}	& 1.0& Extension Asset\\
+	Garden Realistic Tools~\cite{unityGarden}\footnote{\url{https://assetstore.unity.com/packages/3d/garden-realistic-tools-68960}}
+	& 1.0&Extension Assest\\
+	Girasol~\cite{sketchfabGirasol}\footnote{\url{https://sketchfab.com/3d-models/girasol-9e3e900295254b82bc144b3ca4333b80}}
+	& 1.0& Creative Commons Attribution\\
+	Icono Fertilizante~\cite{iconoFertilizante}\footnote{\url{https://www.flaticon.es/icono-gratis/fertilizante_1465973?term=fertilizante&page=1&position=45}}&&Licencia de Flaticon
+	\\
+	Icono Gotas de lluvia~\cite{iconoGotasLluvia} &1 & Free for commercial use \\
+	Font1&&\\
+	Font2&&\\
+	}
